--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                    <i class="fa-solid fa-arrow-right"></i>
             </div></div>
             <div class="col-md-4">
-                <div class="service-box">
+                <div class="service-box box-3">
                     <img src="./images/Icon-3.png" alt="">
                     <h6>Pocket Friendly</h6>
                     <p>Lorem ipsum dolor sit amet consectetur  adipisicing elit. Aliquid quia.</p>
